--- a/css/LoReal.css
+++ b/css/LoReal.css
@@ -1557,4 +1557,4 @@ footer .footer_flex .footer_bottom .horizontal_line {
   height: 1px;
   background: #000;
   top: 0;
-}/*# sourceMappingURL=museum.css.map */
+}/*# sourceMappingURL=LoReal.css.map */
