--- a/css/portfolio.scss
+++ b/css/portfolio.scss
@@ -1,28 +1,15 @@
 @keyframes circle_R_ani1 {
-    0% {transform: rotate(0deg); opacity: 1;border-width: 1px;}
-    100% {transform: rotate(180deg); opacity: 1; border-width:1px;}
+    0% {transform: rotate(0deg); opacity: 1;border-width: 1.5px;}
+    100% {transform: rotate(180deg); opacity: 1; border-width:1.5px;}
 }
 
 @keyframes circle_R_ani2 {
-    0% {z-index: 100;transform: rotate(180deg);opacity: 1; border-width: .5px;
+    0% {z-index: 100;transform: rotate(180deg);opacity: 1; border-width: 0px;
     }
     100% {
         z-index: 100;transform: rotate(360deg); opacity:1; border-width:.3px;
     }
 }
-
-/*@keyframes circle_L_ani1 {
-    0% {transform: rotate(0deg); opacity: 1;}
-    100% {transform: rotate(-180deg); opacity: 1;}
-}
-
-@keyframes circle_L_ani2 {
-    0% {z-index: 100;transform: rotate(-180deg);opacity: 1;}
-
-    100% {
-        z-index: 100;transform: rotate(-360deg); opacity:1;
-    }
-}*/
 
 @keyframes star-rotate{
     0%{
@@ -184,7 +171,7 @@ body {
 
             .drag_icon {
                 position: absolute;
-                bottom: 12%;
+                bottom: 15%;
                 left: 50%;
                 transform: translateX(-50%);
                 width:100%;
@@ -195,7 +182,7 @@ body {
                     display: block;
                     color: #c5c5c5;
                     text-align: center;
-                    font-size: .75em;
+                    font-size: .85em;
                     position: absolute;
                     top: 70%;
                     left: 50%;
@@ -264,6 +251,7 @@ body {
                 left: 0%;
                 right: 0%;
                 z-index:1;
+
             
             }
             .circle_l {
@@ -271,7 +259,7 @@ body {
                 width: 105em;
                 height: 105em;
                 display: block;
-                // border: 1px solid #fefefe26;
+                border: 1px solid #acacac;
                 border-radius: 50%;
                 flex: none;
                 .overlay {
@@ -310,7 +298,7 @@ body {
                 width: 74.625em;
                 height: 74.625em;
                 display: block;
-                //border: 1px solid #fefefe26;
+                border: 1px solid #acacac;
                 border-radius: 50%;
                 z-index: 102;
                 position: relative;
@@ -352,7 +340,7 @@ body {
                 position: relative;
                 width: 45.625em;
                 height: 45.625em;
-                //border: 1px solid #fefefe26;
+                border: 1px solid #acacac;
                 border-radius: 50%;
                 display: flex;
                 justify-content: center;
@@ -374,8 +362,8 @@ body {
                     height: 100%;
                     position: absolute;
                     top: 0;
-                    left: 0; 
-                    border: 1.5px solid #acacac;
+                    left: 0;  
+                    border: 1px solid #acacac;
                     border-radius: 22.8125em 0px 0px 22.8125em;
                     border-right: 0;
                     transform-origin: right; 
@@ -384,6 +372,7 @@ body {
                 }
                 .L {
                     animation: circle_R_ani1 3s linear forwards;
+                    opacity: 0;
                     
                 }
                 .R {
@@ -439,9 +428,9 @@ body {
                         &::before {
                             content: "";
                             display: block;
-                            width: 13em;
+                            width: 25em;
                             height: 100%;
-                            background: linear-gradient(270deg, #000000b5, transparent);
+                            background: linear-gradient(90deg, transparent,rgba(0, 0, 0, 0.7098039216));
                             position: absolute; 
                             top: 0;
                             right: 0;
@@ -470,7 +459,7 @@ body {
                     .img_wrap {
                         position: relative;
                         width: 36em;
-                        padding-top: 65%;
+                        padding-top: 56%;
                         filter: grayscale(1);
                         transition:all 1s;
                         pointer-events: none;
@@ -493,7 +482,7 @@ body {
                         padding: 1em;
                         p {
                             width: 100%;
-                            font-size: 1.2em;
+                            font-size: 1.17em;
                             font-weight: 400;
                         }
                         .first_title {
@@ -577,8 +566,10 @@ body {
                                     font-weight: 200;
                                     font-size: 1em;
                                     color: #fff;
-                                    width: 80%;
+                                    width: 78%;
                                     text-align: left;
+                                    line-height: 1.6;
+                                    letter-spacing: .3px;
                                 }
                             }
                             .link {
@@ -595,7 +586,7 @@ body {
                             position: relative;
                            
                             .img_wrap {
-                                padding-top: 54%;
+                                padding-top: 56%;
                                 position: relative;
                                 width: 100%;
                                 height: 100%;
