--- a/css/LoReal.css
+++ b/css/LoReal.css
@@ -369,7 +369,22 @@ header .menu_wrap .nav_close_btn:hover .line {
   box-sizing: border-box;
   width: 100%;
   overflow: hidden;
-  background: #efefef;
+  background: #fff;
+  /*.svg {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 50%;
+      transform: translate(-50%, -50%); 
+      z-index: 1;
+      display: block;
+      @include tablet(){
+          display:none;
+      }
+      @include mobile(){
+          display: none;
+      }
+  }*/
 }
 @media (min-width: 480px) and (max-width: 767px) {
   .contents .sc_intro .intro_wrap {
@@ -382,7 +397,7 @@ header .menu_wrap .nav_close_btn:hover .line {
   }
 }
 .contents .sc_intro .intro_wrap .tit {
-  font-size: 5em;
+  font-size: 4.5em;
   font-weight: bold;
   padding: 0 1rem;
   line-height: 1.3;
@@ -406,7 +421,8 @@ header .menu_wrap .nav_close_btn:hover .line {
 .contents .sc_intro .intro_wrap .tit .sub_tit {
   display: block;
   font-weight: 100;
-  font-size: 2.5rem;
+  font-size: 2.3rem;
+  padding-top: 0.5em;
 }
 @media (min-width: 480px) and (max-width: 767px) {
   .contents .sc_intro .intro_wrap .tit .sub_tit {
@@ -420,7 +436,7 @@ header .menu_wrap .nav_close_btn:hover .line {
     color: #727272;
   }
 }
-.contents .sc_intro .intro_wrap .svg {
+.contents .sc_intro .intro_wrap .background_ani {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -430,12 +446,12 @@ header .menu_wrap .nav_close_btn:hover .line {
   display: block;
 }
 @media (min-width: 480px) and (max-width: 767px) {
-  .contents .sc_intro .intro_wrap .svg {
+  .contents .sc_intro .intro_wrap .background_ani {
     display: none;
   }
 }
 @media (max-width: 479px) {
-  .contents .sc_intro .intro_wrap .svg {
+  .contents .sc_intro .intro_wrap .background_ani {
     display: none;
   }
 }
@@ -487,25 +503,32 @@ header .menu_wrap .nav_close_btn:hover .line {
     font-weight: 100;
   }
 }
-.contents .sc_intro .intro_wrap .Division_wrap .intro_text .span_text {
+.contents .sc_intro .intro_wrap .Division_wrap .intro_text .span_wrap {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.contents .sc_intro .intro_wrap .Division_wrap .intro_text .span_wrap .span_text {
   position: relative;
   overflow: hidden;
 }
-.contents .sc_intro .intro_wrap .Division_wrap .intro_text .span_text span {
+.contents .sc_intro .intro_wrap .Division_wrap .intro_text .span_wrap .span_text span {
   opacity: 0;
-  font-size: 3em;
+  font-size: 2.5em;
   transform: translateY(-100%);
   display: block;
 }
 @media (min-width: 480px) and (max-width: 767px) {
-  .contents .sc_intro .intro_wrap .Division_wrap .intro_text .span_text span {
+  .contents .sc_intro .intro_wrap .Division_wrap .intro_text .span_wrap .span_text span {
     opacity: 1;
     font-size: unset;
     transform: translateY(100%);
   }
 }
 @media (max-width: 479px) {
-  .contents .sc_intro .intro_wrap .Division_wrap .intro_text .span_text span {
+  .contents .sc_intro .intro_wrap .Division_wrap .intro_text .span_wrap .span_text span {
     opacity: 1;
     font-size: unset;
     transform: translateY(100%);
@@ -618,8 +641,8 @@ header .menu_wrap .nav_close_btn:hover .line {
   }
 }
 .contents .sc_story .hori_wrap .left_text_wrap .big_txt {
-  font-size: 8em;
-  font-weight: bold;
+  font-size: 6em;
+  font-weight: 300;
   writing-mode: vertical-lr;
   /* text-orientation: upright; */
   /* letter-spacing: -3rem; */
@@ -683,7 +706,7 @@ header .menu_wrap .nav_close_btn:hover .line {
   gap: 3vw;
   width: 100%;
   align-items: center;
-  background: #fff;
+  background: linear-gradient(90deg, white, #fff7c8);
   margin-left: 1px;
   /*.img_height {
       @include img_height(130%, )
@@ -724,7 +747,7 @@ header .menu_wrap .nav_close_btn:hover .line {
   }
 }
 .contents .sc_story .hori_wrap .hori_div .hori_zone .subject {
-  font-size: 1.5em;
+  font-size: 1.2em;
   text-align: left;
   color: #3b3b3b;
   width: 50%;
@@ -743,7 +766,7 @@ header .menu_wrap .nav_close_btn:hover .line {
 }
 .contents .sc_story .hori_wrap .hori_div .hori_zone .img_height {
   position: relative;
-  padding-top: 54%;
+  padding-top: 47%;
   width: 100%;
 }
 @media (min-width: 480px) and (max-width: 767px) {
@@ -806,17 +829,19 @@ header .menu_wrap .nav_close_btn:hover .line {
 }
 .contents .sc_banner .tit.sticky p {
   line-height: 0.8;
-  font-size: 9em;
-  font-weight: bold;
+  font-size: 7em;
+  font-weight: 300;
   letter-spacing: -0.04em;
 }
 .contents .sc_banner .banner_wrap .list {
   display: flex;
-  padding-top: 20em;
+  padding-top: 10em;
   flex-direction: row;
   justify-content: space-between;
   flex-wrap: wrap;
   align-items: flex-start;
+  width: 97%;
+  margin: 0 auto;
 }
 @media (min-width: 480px) and (max-width: 767px) {
   .contents .sc_banner .banner_wrap .list {
