--- a/css/LoReal.scss
+++ b/css/LoReal.scss
@@ -349,7 +349,7 @@ header {
             box-sizing: border-box;
             width: 100%;
             overflow: hidden;
-            background: #efefef;
+            background: #fff;
             @include tablet(){
                 padding: 3.5rem 0 1rem 0;
             }
@@ -357,7 +357,7 @@ header {
                 padding: 3.5rem 0 1rem 0;
             }
             .tit {
-                font-size: 5em;
+                font-size: 4.5em;
                 font-weight: bold;
                 padding: 0 1rem;
                 line-height: 1.3;
@@ -376,7 +376,8 @@ header {
                 .sub_tit {
                     display: block;
                     font-weight: 100;
-                    font-size: 2.5rem; 
+                    font-size: 2.3rem; 
+                    padding-top:.5em;
                     @include tablet(){
                         font-size: .7em;
                     }
@@ -387,7 +388,7 @@ header {
                     }
                 }
             }
-            .svg {
+            .background_ani {
                 position: absolute;
                 top: 50%;
                 left: 50%;
@@ -402,6 +403,21 @@ header {
                     display: none;
                 }
             }
+            /*.svg {
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                width: 50%;
+                transform: translate(-50%, -50%); 
+                z-index: 1;
+                display: block;
+                @include tablet(){
+                    display:none;
+                }
+                @include mobile(){
+                    display: none;
+                }
+            }*/
             .Division_wrap {
                 display: flex;
                 flex-direction: row-reverse;
@@ -440,28 +456,36 @@ header {
                         border: 0;
                         font-weight: 100;
                     }
-                    .span_text {
-                        position: relative;
-                        overflow: hidden;
-                        span {
-                            // display: inline-block;
-                            opacity: 0;
-                            font-size: 3em;
-                            transform: translateY(-100%);
-                            display: block;
-                            @include tablet(){
-                                opacity: 1;
-                                font-size: unset;
-                                transform: translateY(100%);
-
-                            }
-                            @include mobile() {
-                                opacity: 1;
-                                font-size: unset;
-                                transform: translateY(100%);
+                    .span_wrap {
+                        width: 100%;
+                        height: 100%;
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: center;
+                        .span_text {
+                            position: relative;
+                            overflow: hidden;
+                            span {
+                                // display: inline-block;
+                                opacity: 0;
+                                font-size: 2.5em;
+                                transform: translateY(-100%);
+                                display: block;
+                                @include tablet(){
+                                    opacity: 1;
+                                    font-size: unset;
+                                    transform: translateY(100%);
+    
+                                }
+                                @include mobile() {
+                                    opacity: 1;
+                                    font-size: unset;
+                                    transform: translateY(100%);
+                                }
                             }
                         }
                     }
+
  
                 }
                 .height_img_wrap {
@@ -559,8 +583,8 @@ header {
                     width: 100%;
                 }
                 .big_txt {
-                    font-size: 8em;
-                    font-weight: bold;
+                    font-size: 6em;
+                    font-weight: 300;
                     writing-mode: vertical-lr;
                     /* text-orientation: upright; */
                     /* letter-spacing: -3rem; */
@@ -619,7 +643,7 @@ header {
                     width: 100%;
                     align-items: center;
                     // background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(251,251,251,1) 30%, rgba(213,213,213,0.6783088235294117) 100%);
-                    background: #fff;
+                    background: linear-gradient(90deg, white, #fff7c8);
                     margin-left: 1px;
                     &::before {
                         content: '';
@@ -638,7 +662,7 @@ header {
                         }
                     }
                     .subject {
-                        font-size: 1.5em;
+                        font-size: 1.2em;
                         text-align: left;
                         color: #3b3b3b;
                         width: 50%;
@@ -653,7 +677,7 @@ header {
                     }
                     .img_height {
                         position: relative;
-                        padding-top: 54%;
+                        padding-top: 47%;
                         width: 100%;
                         @include tablet(){
                             padding-top: 65%;
@@ -731,8 +755,8 @@ header {
             }
             p{
                 line-height: .8;
-                font-size: 9em;
-                font-weight: bold;
+                font-size: 7em;
+                font-weight: 300;
                 letter-spacing: -0.04em;
             }
         }
@@ -740,11 +764,13 @@ header {
             .list {
                 display: flex;
                 // padding-top: 3.6em;
-                padding-top: 20em;
+                padding-top: 10em;
                 flex-direction: row;
                 justify-content: space-between;
                 flex-wrap: wrap;
                 align-items: flex-start;
+                width:97%;
+                margin: 0 auto;
                 @include tablet(){
                     display: block;
                     padding-top: 0;
