--- a/css/portfolio.scss
+++ b/css/portfolio.scss
@@ -19,14 +19,21 @@
       transform:rotate(-360deg);
     }
 }
-
+/*
+믹스인으로 stars만들기 
+@mixin multiple-box-shadow_mixin ($n,$color) {
+    @for $i from 1 through $n{
+        $value: random(4000)-2000+'px' random(4000)-2000+'px' $color'
+    }
+}*/
 @function multiple-box-shadow ($n,$color){
-     $value:'#{random(4000)-2000}px #{random(4000)-2000}px #{$color}';
+    $value:'#{random(4000)-2000}px #{random(4000)-2000}px #{$color}';
   @for $i from 1 through $n{
     $value:'#{$value}, #{random(4000)-2000}px #{random(4000)-2000}px #{$color}'
     }
-   @return unquote($value);
+   @return unquote($value); 
 }
+
 $shadows-small:  multiple-box-shadow(2000,#5bf3ff);
 $shadows-medium: multiple-box-shadow(1000,#fff);
 $shadows-big:    multiple-box-shadow(300,#fff);
@@ -77,8 +84,8 @@ body {
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                width: 11em;
-                height: 11em;
+                width: 12em;
+                height: 12em;
                 border-radius: 50%;
                 flex-direction: column;
                 font-weight: 300;
@@ -88,6 +95,7 @@ body {
                 p {
                     transition: .3s;
                     z-index: 99;
+                    font-size: 1.12em;
                 }
                 &.focus{
                     //display: block;
@@ -97,8 +105,8 @@ body {
             }
             .point_circle {
                 display: block;
-                width: 11em;
-                height: 11em;
+                width: 12em;
+                height: 12em;
                 background-color: #FFF7D6;
                 position: absolute;
                 border-radius: 50%;
@@ -211,12 +219,13 @@ body {
                 top:50%;
                 left:50%;
                 transform: translate(-50%, -50%);
+                border-radius: 50%;
               }
               .star1{
                 width:1px;
                 height:1px;
-                 box-shadow: $shadows-small;
-                  animation:star-rotate 200s linear infinite ;
+                box-shadow: $shadows-small;
+                animation:star-rotate 200s linear infinite ;
               }
               .star2{
                 width:2px;
@@ -496,11 +505,10 @@ body {
                             padding: 1em;
                             background: #fff;
                             left: 0.5em;*/
-                            
                             color: #0000;
                             opacity: 0;
                             position: absolute;
-                            bottom: 0.7em;
+                            bottom: 0.8em;
                         }
                     }
                 }
