--- a/css/tamburins_reDesign.css
+++ b/css/tamburins_reDesign.css
@@ -185,6 +185,7 @@ a {
     /*overflow: hidden;*/
 }
 .main_warp {
+    position: relative;
     background-image: url('../images/temburins_main_01.jpg');
     background-position: center center;
     background-size: cover;
@@ -235,8 +236,22 @@ a {
     border-radius: 50%;
     
 }
+.preview_img {
+    width: 100%;
+    height: 100%;
+    background-image: url('../images/temburins_main_03.jpg');
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    right: 0%;
+    bottom: 0%;
+    background-position: center;
+    background-size: cover;
+
+}
 #canvas {
     overflow: hidden;
+    z-index: 10;
 }/*
 @keyframes textRotation {
 	to {
