--- a/css/tamburins_reDesign.css
+++ b/css/tamburins_reDesign.css
@@ -321,7 +321,75 @@ a {
     gap: 1.3em;
     height: 100%;
     align-items: center;
+    justify-content: center;
 }
+.prd_item_wrap ul {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+.prd_item_wrap ul li {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    opacity: 0;
+
+}
+.prd_item_wrap ul .active {
+    opacity: 1;
+}
+.prd_item_wrap .prd_wrap {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.prd_item_wrap .prd_wrap .img_wrap {
+    position: relative;
+    padding-top: 54.3%;
+    width: 1000px;
+}
+.prd_item_wrap .prd_wrap .prd_info {
+    padding: 1em 0;
+    line-height: 1.3;
+    width: 500px;
+    height: 100%;
+    background: #f7f7f7;
+}
+.prd_item_wrap .prd_wrap .perfume_tit {
+    font-size: 1.8em;
+    font-weight: 500;
+    padding-bottom: 0.5em;
+}
+.prd_item_wrap .prd_wrap .perfume_smell {
+    font-size: 1.1em;
+    font-style: italic;
+    padding-bottom: 0.45em;
+}
+
+.prd_item_wrap .prd_wrap .perfume_info {
+    font-size: 1.1em;
+}
+
+.prd_item_wrap .prd_wrap .img_wrap img {
+    width:100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left:0;
+    object-fit: contain;
+}
+
+
+
+
+
+
+
+
 .prd_item_img {
     flex: 1.5;
     position: relative;
@@ -405,6 +473,18 @@ a {
     margin-left: 0.4em;
     vertical-align: middle;
 }
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 #best_product {
