--- a/css/tamburins_reDesign.css
+++ b/css/tamburins_reDesign.css
@@ -184,6 +184,17 @@ a {
     flex-direction: column;
     /*overflow: hidden;*/
 }
+#main .scratch_txt {
+    position: absolute;
+    z-index: 100;
+    color: #fff;
+    background: #000;
+    padding: 0.5em;
+    pointer-events: none;
+    font-size: 1.2em;
+    opacity: 0;
+
+}
 .main_warp {
     position: relative;
     background-image: url('../images/temburins_main_01.jpg');
@@ -299,7 +310,31 @@ a {
     height: auto;
 }
 
-
+.sub_tit {
+    position: relative;
+    font-size: 1.3em;
+    text-align: center;
+    font-weight: 200;
+    padding-top: 0.5em;
+}
+.sub_tit::before {
+    content: '';
+    display: inline-block;
+    width: 60px;
+    height: 1px;
+    background: #949494;
+    margin-right: 0.4em;
+    vertical-align: middle;
+}
+.sub_tit::after {
+    content: '';
+    display: inline-block;
+    width: 60px;
+    height: 1px;
+    background: #949494;
+    margin-left: 0.4em;
+    vertical-align: middle;
+}
 .new_item_wrap {
     position: relative;
     z-index: 10;
@@ -330,11 +365,13 @@ a {
 }
 .prd_item_wrap ul li {
     position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    opacity: 0;
-
+    top: 50%;
+    left: 100%;
+    transform: translateY(-50%);
+    width: 100%;
+}
+.prd_item_wrap ul li:first-child {
+    left:0%;
 }
 .prd_item_wrap ul .active {
     opacity: 1;
@@ -343,29 +380,40 @@ a {
     display: flex;
     align-items: center;
     justify-content: center;
+    width:100%;
 }
 
 .prd_item_wrap .prd_wrap .img_wrap {
     position: relative;
-    padding-top: 54.3%;
-    width: 1000px;
+    /*padding-top: 54.3%;*/
+    padding-top: 50%;
+    width: 60%;
+        /*transform: scale(.8);*/
 }
 .prd_item_wrap .prd_wrap .prd_info {
-    padding: 1em 0;
+    padding: 1em;
     line-height: 1.3;
-    width: 500px;
-    height: 100%;
-    background: #f7f7f7;
+    width: 30%;
+    background: #ffffff;
+    border-radius: 1em;
+    /*display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100vh;*/
+}
+.prd_item_wrap .prd_wrap .prd_info::after{
+    content:'';
+    display:block;
 }
 .prd_item_wrap .prd_wrap .perfume_tit {
     font-size: 1.8em;
     font-weight: 500;
-    padding-bottom: 0.5em;
+    padding-bottom: 1em;
 }
 .prd_item_wrap .prd_wrap .perfume_smell {
     font-size: 1.1em;
     font-style: italic;
-    padding-bottom: 0.45em;
+    padding-bottom: 0.7em;
 }
 
 .prd_item_wrap .prd_wrap .perfume_info {
@@ -388,13 +436,12 @@ a {
 
 
 
-
+/*
 
 .prd_item_img {
     flex: 1.5;
     position: relative;
     height: 100%;
-    /*padding-top: 113%;*/
 }
 .item_img {
     position: absolute;
@@ -402,7 +449,6 @@ a {
     top: 50%;
     right: 0;
     transform: translateY(-50%);
-    /* opacity: 0; */
     display: none;
 }
 .item_height {
@@ -416,13 +462,11 @@ a {
     position: relative;
     flex: 1;
     height:100%;
-    /* padding-bottom: 51%; */
 }
 .item_txt {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    /* opacity: 0; */
     width: 500px;
     display: none;
     background: #f7f7f7;
@@ -448,34 +492,10 @@ a {
     font-size: 1em;
 }
 
-.sub_tit {
-    position: relative;
-    font-size: 1.3em;
-    text-align: center;
-    font-weight: 200;
-    padding-top: 0.5em;
-}
-.sub_tit::before {
-    content: '';
-    display: inline-block;
-    width: 60px;
-    height: 1px;
-    background: #949494;
-    margin-right: 0.4em;
-    vertical-align: middle;
-}
-.sub_tit::after {
-    content: '';
-    display: inline-block;
-    width: 60px;
-    height: 1px;
-    background: #949494;
-    margin-left: 0.4em;
-    vertical-align: middle;
-}
 
 
 
+*/
 
 
 
