--- a/css/ohm_style.scss
+++ b/css/ohm_style.scss
@@ -44,9 +44,11 @@ body {
         }
         .close_btn {
             position: absolute;
-            top: 7px;
-            right: 7px;
+            top: 0;
+            right: 0;
             margin: 0;
+            padding: 1em;
+            cursor: pointer;
         }
 
     }
